--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,11 @@
     <h2 class="text-2xl font-semibold mb-3 text-center">Mapa de Mesas</h2>
 
     <iframe
-      src="./public/mapa.pdf"
+      src="./mapa.pdf"
       class="w-full h-[600px] border rounded-lg"
     ></iframe>
   </div>
 
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
