--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,26 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-100 min-h-screen flex flex-col items-center p-6">
+<body class="bg-white min-h-screen flex flex-col items-center p-6"></body>
 
-  <h1 class="text-3xl font-bold text-center mb-4">Prom - Buscador de Mesas</h1>
-  <p class="text-gray-700 mb-6 text-center">
+  <h1 class="text-3xl font-bold text-center mb-4 text-[#000582]">Prom - Buscador de Mesas</h1>
+  <p class="text-gray-600 mb-6 text-center"></p>
     Busca tu nombre para saber tu número de mesa.
   </p>
 
   <!-- CONTENEDOR -->
-  <div class="w-full max-w-xl bg-white shadow-lg p-6 rounded-xl">
+  <div class="w-full max-w-xl bg-white shadow-md p-6 rounded-xl border border-gray-200">
 
     <!-- INPUT BUSCADOR -->
     <input
       id="searchInput"
       type="text"
       placeholder="Escribe tu nombre..."
-      class="w-full p-3 border rounded-lg mb-4"
+      class="w-full px-2 py-2 mb-4 bg-transparent border-b-2 border-gray-300 focus:border-[#000582] focus:outline-none transition-all"
       oninput="searchGuest()"
     />
+
+    <ul id="suggestions" class="mt-2 space-y-2"></ul>
 
     <!-- RESULTADO -->
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
