Ecabezado, correción mayusculas y tildes

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-white min-h-screen flex flex-col items-center p-6"></body>
+<body class="bg-white min-h-screen flex flex-col items-center p-6 pt-24"></body>
 
-  <h1 class="text-3xl font-bold text-center mb-4 text-[#000582]">Prom - Buscador de Mesas</h1>
-  <p class="text-gray-600 mb-6 text-center"></p>
-    Busca tu nombre para saber tu número de mesa.
+  <header class="w-full fixed top-0 left-0 bg-[#000582] text-white py-4 shadow-md z-50">
+    <h1 class="text-center text-2xl font-semibold">PROM 2025</h1>
+  </header>
+
+  <p class="text-gray-600 mb-6 text-center">
+  Busca tu nombre para conocer tu mesa.
   </p>
 
   <!-- CONTENEDOR -->
