--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
   
 </head>
 
-<body class="bg-white min-h-screen flex flex-col items-center p-6 pt-24"></body>
+<body class="bg-white min-h-screen flex flex-col items-center p-6 pt-32"></body>
 
-  <header class="w-full fixed top-0 left-0 bg-[#000582] text-white py-4 shadow-md z-50">
-    <h1 class="text-center text-2xl font-semibold">PROM 2025</h1>
+  <header class="w-full fixed top-0 left-0 bg-[#112250] text-white py-6 shadow-2xl z-50">
+      <div class="max-w-5xl mx-auto px-4">
+        <h1 class="text-center text-3xl sm:text-4xl font-semibold">PROM 2025</h1>
+      </div>
   </header>
 
   <p class="text-gray-600 mb-6 text-center">
@@ -35,7 +37,7 @@
       id="searchInput"
       type="text"
       placeholder="Escribe tu nombre..."
-      class="w-full px-2 py-2 mb-4 bg-transparent border-b-2 border-gray-300 focus:border-[#000582] focus:outline-none transition-all"
+      class="w-full px-2 py-2 mb-4 bg-transparent border-b-2 border-gray-300 focus:border-[#112250] focus:outline-none transition-all"
       oninput="searchGuest()"
     />
 
