--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,21 @@
     #imageModal img {
       touch-action: pinch-zoom;
     }
+
   </style>
   
 </head>
 
-<body class="bg-white min-h-screen flex flex-col items-center p-6 pt-32"></body>
+<body class="bg-white min-h-screen flex flex-col items-center p-6 pt-56"></body>
 
-  <header class="w-full fixed top-0 left-0 bg-[#112250] text-white py-6 shadow-2xl z-50">
-      <div class="max-w-5xl mx-auto px-4">
-        <h1 class="text-center text-3xl sm:text-4xl font-semibold">PROM 2025</h1>
-      </div>
+  <header class="w-full fixed top-0 left-0 bg-[#112250] text-white py-8 z-50"
+          style="box-shadow: 0 4px 15px rgba(224, 197, 143, 0.7);">
+    <div class="max-w-5xl mx-auto px-4 text-center">
+      <h1 class="text-4xl sm:text-5xl font-bold tracking-wide">PROM 2025</h1>
+      <h2 class="text-2xl sm:text-3xl mt-2 font-semibold text-[#E0C58F]">Graduation Party</h2>
+    </div>
   </header>
+
 
   <p class="text-gray-600 mb-6 text-center">
   Busca tu nombre para conocer tu mesa.
