Cambio texto instrucción del input

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </header>
 
 
-  <p class="text-gray-600 mb-6 text-center">
+  <p class="text-xl font-semibold mb-5 text-center">
   Busca tu nombre para conocer tu mesa.
   </p>
 
@@ -53,7 +53,7 @@
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
-    <h2 class="text-2xl font-semibold mb-3 text-center">Mapa de Mesas</h2>
+    <h2 class="text-xl font-semibold mb-3 text-center">Mapa de Mesas</h2>
 
     <div class="overflow-auto border rounded-lg" style="touch-action: pinch-zoom;">
       <img 
