--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
       
       <!-- Imagen dentro del modal -->
       <img id="modalImage"
-          src="./mapa.png"
+          src="./mapa2.png"
           class="max-w-none"
           style="width: 100%; height: auto; touch-action: pinch-zoom;">
 
