--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
     <div class="overflow-auto border rounded-lg" style="touch-action: pinch-zoom;">
       <img 
-        src="./mapa.png"
+        src="./mapa2.png"
         class="w-full h-auto object-contain cursor-pointer"
         alt="Mapa de mesas"
         onclick="openModal()"
