--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,18 @@
 
 <body class="bg-white min-h-screen flex flex-col items-center p-6 pt-56"></body>
 
-    <header class="w-full fixed top-0 left-0 bg-[#112250] text-white py-4 z-50"
+    <header class="w-full fixed top-0 left-0 bg-[#112250] text-white py-7 z-50"
           style="box-shadow: 0 4px 15px rgba(224, 197, 143, 0.7);">
 
     <div class="max-w-5xl mx-auto px-4 relative flex items-center">
 
-      <!-- LOGO IZQUIERDA (posición absoluta, NO afecta el centrado del texto) -->
+      <!-- LOGO IZQUIERDA -->
       <img 
-        src="./logoprom.png" 
-        alt="Logo Prom 2025" 
-        class="h-18 w-auto object-contain absolute left-6 top-1/2 -translate-y-1/2"
+        src="./logoprom.png"
+        class="h-20 w-auto object-contain absolute left-6 top-1/2 -translate-y-1/2"
       />
 
-      <!-- TÍTULOS SIEMPRE CENTRADOS -->
+      <!-- TEXTO CENTRADO -->
       <div class="w-full text-center">
         <h1 class="text-4xl sm:text-5xl font-bold tracking-wide">PROM 2025</h1>
         <h2 class="text-2xl sm:text-3xl mt-1 font-semibold text-[#E0C58F]">
