--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
-    <h2 class="text-xl font-semibold mb-3 text-center">Mapa de Mesas</h2>
+    <h2 class="text-3xl font-bold text-center mt-4 mb-4">Mapa de Mesas</h2>
 
     <div class="overflow-auto border rounded-lg" style="touch-action: pinch-zoom;">
       <img 
