--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,10 @@
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
   </div>
 
+  <!-- SECCIÓN DE MESAS INTERACTIVAS -->
+  <div id="mesasContainer" class="grid grid-cols-3 gap-4 mt-10 mb-10 place-items-center">
+  </div>
+
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
     <h2 class="text-3xl font-bold text-center mt-4 mb-4">Mapa de Mesas</h2>
