--- a/public/index.html
+++ b/public/index.html
@@ -98,11 +98,28 @@
       <button 
         onclick="closeModal()"
         class="absolute top-4 right-4 bg-white text-black rounded-full px-4 py-2 shadow">
-        Cerrar
+        ✕
       </button>
 
     </div>
   </div>
+
+    <!-- Modal Integrantes -->
+  <div id="modalMesa" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50"
+      onclick="cerrarModalMesa(event)">
+    
+    <div id="modalMesaContent" class="bg-white rounded-2xl p-6 w-80 max-h-[80vh] overflow-y-auto shadow-xl"
+        onclick="event.stopPropagation()">
+
+      <button class="ml-auto mb-2 text-[#000582]-600 font-bold text-xl"
+              onclick="cerrarModalMesa(event)">✕</button>
+
+      <div id="modalMesaTitulo" class="text-3xl font-bold text-[#000582] text-center"></div>
+      <ul id="modalMesaLista" class="mt-4 text-center"></ul>
+
+    </div>
+  </div>
+
 
   <script src="./app.js"></script>
 </body>
