--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,11 @@
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
   </div>
 
-  <!-- SECCIÓN DE MESAS INTERACTIVAS -->
-  <div id="mesasContainer" class="grid grid-cols-3 gap-4 mt-10 mb-10 place-items-center">
-  </div>
+      <!-- NUEVO CONTENEDOR DE MESAS CON POSICIONES ABSOLUTAS -->
+    <div id="mesasContainer"
+        class="relative mx-auto mt-10 mb-10"
+        style="width: 600px; height: 1200px;">
+    </div>
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
