--- a/public/index.html
+++ b/public/index.html
@@ -65,11 +65,12 @@
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
   </div>
 
-      <!-- NUEVO CONTENEDOR DE MESAS CON POSICIONES ABSOLUTAS -->
-    <div id="mesasContainer"
-        class="relative mx-auto mt-10 mb-10"
-        style="width: 600px; height: 1200px;">
-    </div>
+   <div id="mesasContainerWrapper" class="w-full flex justify-center mt-10 mb-10">
+  <div id="mesasContainer"
+       class="relative"
+       style="width: min(90vw, 600px); height: calc(min(90vw, 600px) * 2);">
+  </div>
+</div>
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
