--- a/public/index.html
+++ b/public/index.html
@@ -65,11 +65,15 @@
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
   </div>
 
-      <!-- NUEVO CONTENEDOR DE MESAS CON POSICIONES ABSOLUTAS -->
     <div id="mesasContainer"
-        class="relative mx-auto mt-10 mb-10"
-        style="width: 600px; height: 1200px;">
-    </div>
+     class="relative mx-auto mt-10 mb-10"
+     style="
+       width: 100%;
+       max-width: 420px;   /* más angosto para centrar */
+       height: 1200px;
+       position: relative;
+     ">
+</div>
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
