--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,6 @@
       touch-action: pinch-zoom;
     }
 
-
-    /* Contenedor mapa: el inner (#mesasContainer) contiene mesas absolute */
-#mapFrame { height: 900px; } /* altura del lienzo; ajusta si lo deseas */
-
-/* Ajustes visuales de las mesas creadas por tu JS */
-.mesaItem {
-  /* si tu JS usa clases Tailwind esto no rompe nada; estas reglas solo afinan */
-  box-sizing: border-box;
-  touch-action: manipulation;
-}
-
-/* Estilo para mesa seleccionada (puedes usar lo mismo que aplicas en JS) */
-.mesaItem.highlight {
-  background-color: #112250 !important;
-  color: #ffffff !important;
-  border-color: #E0C58F !important;
-}
-
-/* Habilitar que el mapFrame sea un área para gestos */
-#mapFrame, #mesasContainer {
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
   </style>
   
 </head>
@@ -90,21 +65,9 @@
     <div id="result" class="text-xl font-semibold text-center mt-2"></div>
   </div>
 
- <!-- SECCIÓN DE MESAS INTERACTIVAS (CONTENEDOR CENTRADO + BORDE DORADO) -->
-<div class="w-full max-w-xl"> <!-- mantiene el mismo ancho que tu input -->
-  <div id="mapWrapper" class="mx-auto mt-6 mb-6" style="width:100%;">
-    <div id="mapFrame"
-         style="width:100%; background:#ffffff; border:3px solid #E0C58F; border-radius:12px; overflow:hidden; touch-action:none; position:relative;">
-      
-      <!-- Este es el lienzo donde TU app.js seguirá creando los div#mesa-1..#mesa-32 -->
-      <!-- IMPORTANTE: mantenemos el mismo id para compatibilidad -->
-      <div id="mesasContainer" style="position:relative; width:100%; height:1000px;">
-        <!-- tus mesas serán inyectadas aquí por generarMesas() -->
-      </div>
-
-    </div>
+  <!-- SECCIÓN DE MESAS INTERACTIVAS -->
+  <div id="mesasContainer" class="grid grid-cols-3 gap-4 mt-10 mb-10 place-items-center">
   </div>
-</div>
 
   <!-- PDF -->
   <div class="mt-10 w-full max-w-3xl">
