--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
         
         <div id="mesasContainer" 
              class="p-8 min-w-max"
-             style="transform-origin: top left; transition: transform 0.1s ease-out;">
+             style="transform-origin: center center; transition: transform 0.1s ease-out;">
           <!-- Las mesas se generarán aquí con JavaScript -->
         </div>
       
